--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "gulp-less": "^3.1.0",
+    "del": "^2.2.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-uglify": "^1.5.3"
   }
 }
+
